<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingBottom="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="16dp">

        <Button
            android:id="@+id/btnRates"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="handleRatesClick"
            android:padding="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/sRates" />

        <Button
            android:id="@+id/btnGold"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="handleGoldClick"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/sGold" />


        <Button
            android:id="@+id/btnExchange"
            style="@style/Widget.MaterialComponents.Button"

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="handleExchangeClick"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/sExchange" />



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>